--- a/K.A.D.Devinda_cobsccomp191p-044/Info.plist
+++ b/K.A.D.Devinda_cobsccomp191p-044/Info.plist
@@ -28,6 +28,10 @@
 	<string>Please allow us to access your location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Please allow us to access your location</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Please allow us to access face id</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow us to access camara</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
